--- a/styles/collage.css
+++ b/styles/collage.css
@@ -23,3 +23,20 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
 }
+
+/* Responsive Media Query */
+
+@media screen and (max-width:576px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+}
+
+/* medium devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+}
